--- a/_config.yml
+++ b/_config.yml
@@ -41,14 +41,14 @@ relative_link: false
 future: true
 highlight:
   enable: false
-  line_number: true
-  auto_detect: false
-  tab_replace:
+  #line_number: true
+  #auto_detect: false
+  # tab_replace:
 
 
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
-  theme: 'default'
+  theme: 'tomorrow'
   line_number: false    # default false
   custom_css:
 
