--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ highlight:
 
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
-  theme: 'default'
+  theme: 'tomorrow'
   line_number: false    # default false
   custom_css:
 
