--- a/_config.yml
+++ b/_config.yml
@@ -40,18 +40,16 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: false
-  #line_number: true
-  #auto_detect: false
-  # tab_replace:
-
+  enable: true
+  line_number: false
+  auto_detect: false
+  tab_replace:
 
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
   theme: 'tomorrow'
   line_number: false    # default false
   custom_css:
-
     
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -82,7 +80,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-matery
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
