--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-pug": "0.0.5",
+    "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "hexo-toc": "^1.1.0"
