--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "dependencies": {
     "hexo": "^3.8.0",
@@ -17,9 +17,11 @@
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-prism-plugin": "^2.3.0",
+    "hexo-render-pug": "^2.1.4",
     "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^0.3.2",
-    "hexo-renderer-pug": "0.0.5",
+    "hexo-renderer-pug": "^0.0.5",
     "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
