--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,21 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape-plus
+theme: artemis
+
+theme_config:
+  logo:
+  disqus: https-yanhang-me
+  copyright:
+    since: 2020
+    name: Hang Yan
+    url: https://www.example.org/john-doe
+  menu:
+    Home: /
+    About: /about
+    Archives: /archives
+    GitHub: https://github.com/hangyan
+    RSS: /atom.xml
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
